# pykokkos

./: .gitignore  README.md  activate_pyk.sh  check_reducer.py  install_base.py  pyproject.toml  runtests.py  setup.py
.github/workflows/: array_api.yml  base-cancelling.yml  base-linux-ci.yml  base-python-package.yml  build_linux.yml  build_macos.yml  formatting.yml  main_ci.yml  (+1 more)
base/: CMakeLists.txt  README.md  environment.yml  setup.py
benchmarks/: dgemm_compare.py
docs/: conf.py  environment_variables.rst  examples.rst  fusion.rst  index.rst  installation.rst  jit_compilation.rst
pykokkos/: __init__.py
pykokkos/core/: CMakeLists.txt  compiler.py  cpp_setup.py  keywords.py  module_setup.py  run_debug.py  runtime.py
pykokkos/core/cppast/: decl.py  expr.py  serializer.py  stmt.py
pykokkos/core/fusion/: __init__.py  access_modes.py  fuse.py  trace.py  util.py
pykokkos/core/optimizations/: __init__.py  loop_fuse.py  memory_ops_fuse.py  restrict_views.py  util.py
pykokkos/core/parsers/: parser.py
pykokkos/core/translators/: bindings.py  functor.py  functor_cast.py  members.py  reducer_util.py  static.py  symbols_pass.py
pykokkos/core/type_inference/: __init__.py  args_type_inference.py
pykokkos/core/visitors/: __init__.py  classtype_visitor.py  constructor_visitor.py  kokkosfunction_visitor.py  kokkosmain_visitor.py  parameter_visitor.py  pykokkos_visitor.py  visitors_util.py  workunit_visitor.py
tests/: _logging_probe.py  loop_fusion_kernels.py  test_AST_translator.py  test_atomics.py  test_classtypes_translator.py  test_ext_module.py  test_fusion.py  test_hierarchical.py  test_kokkosfunctions_translator.py  test_lambdas.py  test_linalg.py  test_loop_fusion.py  test_ops_translator.py  test_parallelfor.py  test_parallelreduce.py  test_parallelreduce_mod.py  test_parallelscan.py  test_recompile.py  test_regressions.py  test_scratch_size.py  test_typeinference.py  test_ufuncs.py  test_view_dtype_mismatch.py  test_views.py
tools/: pre_compile_ufuncs.py
(+132 files in other folders)
